# crucible

./: .gitignore  CONTRIBUTING.md  Cargo.toml  NIX_STATUS.md  NIX_USAGE.md  README.md  UPSTREAM.md  flake.nix  local.sh  out.txt  package-manifest.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.config/: hakari.toml
.github/workflows/: hakari.yml  release-seed-binaries.yml  rust.yml
admin-client/: Cargo.toml
admin-client/src/: lib.rs
agent/: Cargo.toml  agent.xml  agent_method_script.sh  downstairs.xml  downstairs_method_script.sh
agent-antagonist/: Cargo.toml
agent-antagonist/src/: main.rs
agent-api/: Cargo.toml
agent-api/src/: lib.rs
agent-client/: Cargo.toml
agent-client/src/: lib.rs
agent-types/: Cargo.toml
agent-types/src/: lib.rs  region.rs  smf.rs  snapshot.rs
agent-types/versions/: Cargo.toml
agent-types/versions/src/: latest.rs  lib.rs
agent-types/versions/src/initial/: mod.rs  region.rs  snapshot.rs
agent/smf/: agent.xml  downstairs.xml
agent/src/: datafile.rs  main.rs  model.rs  resource.rs  server.rs  smf_interface.rs  snapshot_interface.rs
aws_benchmark/: README.md  ansible.cfg  args.sh  bench.sh  bring_up_resources.sh  cleanup.sh  cleanup.yml  downstairs.service.j2  downstairs.xml  driver.sh  install_crucible.yml  inv.sh  main.tf  providers.tf  run_benchmark.sh
aws_benchmark/crucible_simple_test_vpc/: ec2.tf  helios_user_data.sh  outputs.tf  sg.tf  ubuntu_user_data.sh  variables.tf  vpc.tf
client/: Cargo.toml
client/src/: cli.rs  main.rs  protocol.rs  stats.rs
cmon/: Cargo.toml
cmon-common/: Cargo.toml
cmon-common/src/: lib.rs
cmon/src/: ctop.rs  main.rs
common/: Cargo.toml  build.rs
common/proptest-regressions/: impacted_blocks.txt
common/src/: impacted_blocks.rs  lib.rs  region.rs  seed_iroh.rs  x509.rs
control-client/: Cargo.toml
control-client/src/: lib.rs
cruadmin/: Cargo.toml
cruadmin/src/: main.rs
crucadm/: Cargo.toml
crucadm/src/: main.rs
crucible-client-types/: Cargo.toml
crucible-client-types/src/: lib.rs
crucible-for-clients/: Cargo.toml
crudd/: Cargo.toml  README.md  test.sh
crudd/src/: main.rs
cruplay/: Cargo.toml
cruplay/src/: main.rs  plot.gpl
crutest/: Cargo.toml
crutest/src/: cli.rs  control.rs  main.rs  protocol.rs  stats.rs
ctop/: Cargo.toml  TODO.md
ctop/src/: main.rs
ctop/tests/: integration_test.rs
downstairs/: Cargo.toml
downstairs-admin-api/: Cargo.toml
downstairs-admin-api/src/: lib.rs
downstairs-api/: Cargo.toml
downstairs-api/src/: lib.rs
downstairs-repair-api/: Cargo.toml
downstairs-repair-api/src/: lib.rs
downstairs-types/: Cargo.toml
downstairs-types/src/: admin.rs  lib.rs  repair.rs
downstairs-types/versions/: Cargo.toml
downstairs-types/versions/src/: latest.rs  lib.rs
downstairs-types/versions/src/impls/: mod.rs
downstairs-types/versions/src/initial/: admin.rs  mod.rs  repair.rs
downstairs/benches/: downstairs.rs
downstairs/src/: admin.rs  complete_jobs.rs  deferred.rs  disk.rs  dump.rs  dynamometer.rs  extent.rs  extent_inner_raw.rs  extent_inner_raw_common.rs  extent_inner_raw_v2.rs  extent_inner_sqlite.rs  http.rs  lib.rs  main.rs  region.rs  repair.rs  stats.rs
dropshot-apis/: Cargo.toml
dropshot-apis/src/: main.rs
dsc/: Cargo.toml
dsc-client/: Cargo.toml
dsc-client/src/: lib.rs
dsc/src/: client.rs  control.rs  main.rs
fio/: README.md  crucible.fio  cumulative_points_over_time.py  fio.sh  generate_crucible_fio.py  hist.py  plt.plt
hammer/: Cargo.toml
hammer/src/: README.md  hammer.c  main.rs
integration_tests/: Cargo.toml
integration_tests/src/: lib.rs
measure_iops/: Cargo.toml  README.md
measure_iops/src/: main.rs
nbd_server/: Cargo.toml
nbd_server/src/: README.md  main.rs
openapi/: README.md  crucible-admin.json  crucible-agent.json  crucible-control.json  crucible-pantry.json  downstairs-repair.json  dsc-control.json
openapi/crucible-agent/: crucible-agent-1.0.0-6cedb8.json  crucible-agent-latest.json
openapi/crucible-pantry/: crucible-pantry-1.0.0-ad603f.json  crucible-pantry-1.0.0-ad603f.json.gitstub  crucible-pantry-2.0.0-9dbf85.json  crucible-pantry-latest.json
openapi/downstairs-repair/: downstairs-repair-1.0.0-178638.json  downstairs-repair-1.0.0-178638.json.gitstub  downstairs-repair-2.0.0-9f0059.json  downstairs-repair-latest.json
package/: Cargo.toml  README.md
package/src/: main.rs
pantest/: Cargo.toml  README.md
pantest/src/: main.rs
pantry/: Cargo.toml  pantry_method_script.sh
pantry-api/: Cargo.toml
pantry-api/src/: lib.rs
pantry-client/: Cargo.toml
pantry-client/src/: lib.rs
pantry-types/: Cargo.toml
pantry-types/src/: lib.rs  pantry.rs
pantry-types/versions/: Cargo.toml
pantry/smf/: manifest.xml  pantry.xml
pantry/src/: lib.rs  main.rs  pantry.rs  server.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  main.rs
raw-extent/: Cargo.toml
raw-extent/src/: lib.rs
repair-client/: Cargo.toml
repair-client/src/: lib.rs
rest_server/: Cargo.toml  start
rest_server/src/: main.rs
scope/: Cargo.toml
scope/src/: lib.rs
smf/: Cargo.toml
smf/examples/: info.rs
smf/src/: instance.rs  lib.rs  libscf.rs  property.rs  (+7 more)
tools/: README.md  create-generic-ds.sh  crudd-speed-battery.sh  downstairs_daemon.sh  ds_state.d  hammer-loop.sh  hammer_loop.sh  live_repair_forever.sh  loop-double-repair.sh  loop-repair.sh  make-dtrace.sh  make-nightly.sh  make-utils.sh  perfdw.d  perfgw.d  scope.sh  show_ox_propolis.sh  show_ox_stats.sh  show_ox_upstairs.sh  start_ds.sh  test_ds.sh  test_dsc.sh  test_dsc_start.sh  test_fail_live_repair.sh  test_live_repair.sh  test_mem.sh  test_nightly.sh  test_pantry_hang.sh  test_perf.sh  test_read_only.sh  test_reconnect.sh  test_repair.sh  test_repair_perf.sh  test_repair_reconnect.sh  test_replace_special.sh  test_replay.sh  test_restart_repair.sh  test_up.sh  threedisks.sh  tracegw.d  (+1 more)
upstairs/: Cargo.toml  build.rs  crutrace.d
verify-raw/: Cargo.toml
volume_integration_tests/: Cargo.toml
workspace-hack/: Cargo.toml
x509/: Makefile  README.md  gen_certs.sh
xtask/: Cargo.toml
(+99 files in other folders)
