[workspace]
members = [
    "agent",
    "agent-client",
    "crucible-client-types",
    "common",
    "control-client",
    "cmon",
    "crudd",
    "cruplay",
    "crutest",
    "downstairs",
    "dsc",
    "dsc-client",
    "hammer",
    "integration_tests",
    "measure_iops",
    "nbd_server",
    "package",
    "pantry",
    "pantry-client",
    "protocol",
    "repair-client",
    "smf",
    "upstairs",
]

[profile.dev]
panic = 'abort'
