[workspace]
members = [
    "agent",
    "agent-client",
    "crucible-client-types",
    "common",
    "control-client",
    "cmon",
    "crudd",
    "crutest",
    "downstairs",
    "dsc",
    "dsc-client",
    "hammer",
    "integration_tests",
    "measure_iops",
    "nbd_server",
    "package",
    "pantry",
    "pantry-client",
    "protocol",
    "repair-client",
    "smf",
    "upstairs",
    "workspace-hack",
    "agent-antagonist",
]
resolver = "2"

[workspace.dependencies]

# crates.io
aes-gcm-siv = "0.11.1"
anyhow = "1"
async-recursion = "1.0.5"
async-trait = "0.1.77"
atty = "0.2.14"
base64 = "0.21.7"
bincode = "1.3"
byte-unit = "5.1.4"
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = [ "serde" ] }
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clearscreen = "2.0.1"
crossterm = { version = "0.27.0" }
crucible-workspace-hack = "0.1.0"  # see [patch.crates-io.crucible-workspace-hack] for more
csv = "1.3.0"
expectorate = "1.1.0"
futures = "0.3"
futures-core = "0.3"
hex = "0.4"
http = "0.2.11"
httptest = "0.15.5"
hyper = { version = "0.14", features = [ "full" ] }
hyper-staticfile = "0.9"
indicatif = { version = "0.17.8", features = ["rayon"] }
itertools = "0.12.1"
libc = "0.2"
mime_guess = "2.0.4"
nbd = "0.2.3"
nix = { version = "0.27", features = [ "feature", "uio" ] }
num_enum = "0.7"
num-derive = "0.4"
num-traits = "0.2"
omicron-zone-package = "0.10.0"
openapiv3 = "2.0.0"
opentelemetry = "0.21.0"
opentelemetry-jaeger = { version = "0.20.0" }
percent-encoding = "2.3"
proptest = "1.4.0"
rayon = "1.8.1"
rand = { version = "0.8.5", features = ["min_const_gen", "small_rng"] }
rand_chacha = "0.3.1"
reedline = "0.29.0"
reqwest = { version = "0.11", features = ["default", "blocking", "json", "stream"] }
ringbuffer = "0.15.0"
rusqlite = { version = "0.31" }
rustls-pemfile = { version = "1.0.4" }
schemars = { version = "0.8", features = [ "chrono", "uuid1" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
sha2 = "0.10"
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = { version = "2.8" }
slog-bunyan = "2.5.0"
slog-dtrace = "0.3"
slog-term = { version = "2.9" }
static_assertions = "1.1.0"
statistical = "1.0.0"
subprocess = "0.2.9"
strum_macros = "0.26.2"
tempfile = "3"
test-strategy = "0.3.1"
thiserror = "1"
tokio = { version = "1.36", features = ["full"] }
tokio-rustls = { version = "0.24.1" }
tokio-test = "*"
tokio-util = { version = "0.7", features = ["codec"]}
toml = "0.8"
tracing = "0.1"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = "0.3.18"
twox-hash = "1.6.3"
usdt = "0.5.0"
uuid = { version = "1", features = [ "serde", "v4" ] }

# git
dropshot = { git = "https://github.com/oxidecomputer/dropshot", branch = "main", features = [ "usdt-probes" ] }
omicron-common = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
openapi-lint = { git = "https://github.com/oxidecomputer/openapi-lint", branch = "main" }
oximeter = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
oximeter-producer = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
progenitor = { git = "https://github.com/oxidecomputer/progenitor", branch = "main" }

# local path
crucible = { path = "./upstairs" }
crucible-client-types = { path = "./crucible-client-types" }
crucible-agent-client = { path = "./agent-client" }
crucible-common = { path = "./common" }
crucible-control-client = { path = "./control-client" }
# importantly, don't use features = ["zfs_snapshot"] here, this will cause
# cleanup issues in the integration tests!
crucible-downstairs = { path = "./downstairs" }
crucible-pantry = { path = "./pantry" }
crucible-pantry-client = { path = "./pantry-client" }
crucible-protocol = { path = "./protocol" }
crucible-smf = { path = "./smf" }
dsc-client = { path = "./dsc-client" }
repair-client = { path = "./repair-client" }

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'

# Using the workspace-hack via this patch directive means that it only applies
# while building within this workspace. If another workspace imports a crate
# from here via a git dependency, it will not have the workspace-hack applied
# to it.
[patch.crates-io.crucible-workspace-hack]
path = "workspace-hack"
