[workspace]
members = [
    "agent",
    "agent-client",
    "crucible-client-types",
    "common",
    "control-client",
    "cmon",
    "crudd",
    "crutest",
    "downstairs",
    "dsc",
    "dsc-client",
    "hammer",
    "integration_tests",
    "measure_iops",
    "nbd_server",
    "package",
    "pantry",
    "pantry-client",
    "protocol",
    "repair-client",
    "smf",
    "upstairs",
    "workspace-hack",
    "agent-antagonist",
]
resolver = "2"

[workspace.dependencies]

# crates.io
aes-gcm-siv = "0.11.1"
anyhow = "1"
async-recursion = "1.1.1"
async-trait = "0.1.86"
atty = "0.2.14"
base64 = "0.22.1"
bincode = "1.3"
byte-unit = "5.1.6"
bytes = { version = "1", features = ["serde"] }
camino = { version = "1.1", features = ["serde1"] }
cfg-if = { version = "1" }
chrono = { version = "0.4", features = [ "serde" ] }
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clearscreen = "2.0.1"
crossterm = { version = "0.28.1" }
crucible-workspace-hack = "0.1.0"  # see [patch.crates-io.crucible-workspace-hack] for more
csv = "1.3.1"
expectorate = "1.1.0"
futures = "0.3"
futures-core = "0.3"
hex = "0.4"
http = "0.2.12"
httptest = "0.16.3"
human_bytes = "0.4.3"
humantime = "2.1.0"
hyper = { version = "1", features = [ "full" ] }
hyper-staticfile = "0.10.1"
indicatif = { version = "0.17.11", features = ["rayon"] }
itertools = "0.13.0"
libc = "0.2"
mime_guess = "2.0.5"
nbd = "0.3.1"
nix = { version = "0.29", features = [ "feature", "uio" ] }
num_enum = "0.7"
num-derive = "0.4"
num-traits = "0.2"
omicron-zone-package = "0.11.1"
openapiv3 = "2.0.0"
opentelemetry = "0.28.0"
opentelemetry-jaeger = { version = "0.20.0" }
percent-encoding = "2.3"
progenitor = "0.9.1"
progenitor-client = "0.9.1"
proptest = "1.6.0"
rayon = "1.10.0"
rand = { version = "0.8.5", features = ["min_const_gen", "small_rng"] }
rand_chacha = "0.3.1"
reedline = "0.38.0"
rangemap = "1.5.1"
reqwest = { version = "0.12", features = ["default", "blocking", "json", "stream"] }
ringbuffer = "0.15.0"
rusqlite = { version = "0.34" }
rustls-pemfile = { version = "1.0.4" }
schemars = { version = "0.8", features = [ "chrono", "uuid1" ] }
semver = "1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
sha2 = "0.10"
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = { version = "2.8" }
slog-bunyan = "2.5.0"
slog-dtrace = "0.3"
slog-term = { version = "2.9" }
static_assertions = "1.1.0"
statistical = "1.0.0"
subprocess = "0.2.9"
strum = "0.27"
strum_macros = "0.26"
tempfile = "3"
test-strategy = "0.4.0"
thiserror = "1"
tokio = { version = "1.40", features = ["full"] }
tokio-rustls = { version = "0.24.1" }
tokio-test = "*"
tokio-util = { version = "0.7", features = ["codec"]}
toml = "0.8"
tracing = "0.1"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = "0.3.19"
twox-hash = "2.1.0"
usdt = "0.5.0"
uuid = { version = "1", features = [ "serde", "v4" ] }

# git
dropshot = { version = "0.16.0", features = [ "usdt-probes" ] }
omicron-common = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
nexus-client = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
internal-dns = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
omicron-uuid-kinds = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
openapi-lint = { git = "https://github.com/oxidecomputer/openapi-lint", branch = "main" }
oximeter = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
oximeter-producer = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }

# local path
crucible = { path = "./upstairs" }
crucible-client-types = { path = "./crucible-client-types" }
crucible-agent-client = { path = "./agent-client" }
crucible-common = { path = "./common" }
crucible-control-client = { path = "./control-client" }
# importantly, don't use features = ["zfs_snapshot"] here, this will cause
# cleanup issues in the integration tests!
crucible-downstairs = { path = "./downstairs" }
crucible-pantry = { path = "./pantry" }
crucible-pantry-client = { path = "./pantry-client" }
crucible-protocol = { path = "./protocol" }
crucible-smf = { path = "./smf" }
dsc-client = { path = "./dsc-client" }
repair-client = { path = "./repair-client" }

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'

# Using the workspace-hack via this patch directive means that it only applies
# while building within this workspace. If another workspace imports a crate
# from here via a git dependency, it will not have the workspace-hack applied
# to it.
[patch.crates-io.crucible-workspace-hack]
path = "workspace-hack"
