[package]
name = "agent-antagonist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
crucible-agent-client.workspace = true
tokio.workspace = true
serde.workspace = true
rand.workspace = true
anyhow.workspace = true
clap.workspace = true
slog.workspace = true
slog-term.workspace = true
slog-bunyan.workspace = true
crucible-common.workspace = true
uuid.workspace = true
crucible-workspace-hack.workspace = true
