[package]
name = "agent-antagonist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
crucible-agent-client.workspace = true
crucible-common.workspace = true
crucible-workspace-hack.workspace = true
futures-core.workspace = true
futures.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
signal-hook-tokio.workspace = true
signal-hook.workspace = true
slog.workspace = true
slog-term.workspace = true
slog-bunyan.workspace = true
tokio.workspace = true
uuid.workspace = true
