[package]
name = "crucible-agent-api"
version = "0.1.0"
license = "MPL-2.0"
edition = "2024"

[dependencies]
crucible-agent-types.workspace = true
crucible-workspace-hack.workspace = true
dropshot.workspace = true
dropshot-api-manager-types.workspace = true
schemars.workspace = true
serde.workspace = true
