[package]
name = "crucible-agent-client"
version = "0.0.1"
license = "MPL-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = [ "serde" ] }
percent-encoding = "2.1"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
schemars = "0.8"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]
