[package]
name = "crucible-agent-types"
version = "0.1.0"
license = "MPL-2.0"
edition = "2024"

[dependencies]
chrono.workspace = true
crucible-smf.workspace = true
crucible-workspace-hack.workspace = true
serde.workspace = true
schemars.workspace = true

[dev-dependencies]
serde_json.workspace = true
