[package]
name = "crucible-agent"
version = "0.0.1"
license = "MPL-2.0"
edition = "2018"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = [ "serde" ] }
clap = { version = "4.0", features = ["derive"] }
dropshot = { git = "https://github.com/oxidecomputer/dropshot", branch = "main" }
futures = "0.3.25"
http = "0.2.8"
hyper = "0.14"
schemars = { version = "0.8.11", features = [ "chrono", "uuid1" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
slog = { version = "2.7", features = [ "max_level_trace", "release_max_level_debug" ] }
crucible-common = { path = "../common" }
crucible-smf = { path = "../smf" }
omicron-common = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
tokio = { version = "1.22", features = [ "full" ] }
uuid = { version = "1.2.2", features = [ "serde", "v4" ] }

[dev-dependencies]
expectorate = "1.0.5"
openapiv3 = "1.0"
openapi-lint = { git = "https://github.com/oxidecomputer/openapi-lint" }
subprocess = "0.2.9"
