[package]
name = "crucible-agent"
version = "0.0.1"
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crucible-common.workspace = true
crucible-smf.workspace = true
dropshot.workspace = true
futures.workspace = true
http.workspace = true
hyper.workspace = true
omicron-common.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
slog.workspace = true
tokio.workspace = true
uuid.workspace = true
crucible-workspace-hack.workspace = true

[dev-dependencies]
expectorate.workspace = true
openapi-lint.workspace = true
openapiv3.workspace = true
subprocess.workspace = true
tempfile.workspace = true
slog-term.workspace = true
