[package]
name = "crucible-client"
version = "0.1.0"
authors = ["Joshua M. Clulow <jmc@oxide.computer>", "Alan Hanson <alan@oxide.computer"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
anyhow = "1"
bincode = "1.3.3"
bytes = "1"
crucible = { path = "../upstairs" }
crucible-common = { path = "../common" }
crucible-protocol = { path = "../protocol" }
crucible-scope = { path = "../scope" }
futures = "0.3"
futures-core = "0.3"
ringbuffer = "0.8"
rand = "0.8.5"
rand_chacha = "0.3.1"
rustyline = "9.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"]}
toml = "0.5"
uuid = { version = "0.8", features = [ "serde", "v4" ] }
