[package]
name = "crucible-client"
version = "0.1.0"
authors = ["Joshua M. Clulow <jmc@oxide.computer>", "Alan Hanson <alan@oxide.computer"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
anyhow = "1"
bincode = "1.3.3"
bytes = "1"
clap = { version = "3.2", features = ["derive", "env"] }
crossterm = { version = "0.23.2" }
crucible = { path = "../upstairs" }
crucible-common = { path = "../common" }
crucible-protocol = { path = "../protocol" }
csv = "1.1.6"
futures = "0.3"
futures-core = "0.3"
indicatif = { version = "0.16.2", features = ["rayon"] }
ringbuffer = "0.8"
rand = "0.8.5"
rand_chacha = "0.3.1"
reedline = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
statistical = "1.0.0"
tokio = { version = "1.19.2", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"]}
toml = "0.5"
uuid = { version = "1.0.0", features = [ "serde", "v4" ] }
