[package]
name = "cmon"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"

[dependencies]
clap.workspace = true
clearscreen.workspace = true
crucible.workspace = true
crucible-control-client.workspace = true
crucible-protocol.workspace = true
serde_json.workspace = true
tokio.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }
