[package]
name = "crucible-common"
version = "0.0.1"
authors = ["Joshua M. Clulow <jmc@oxide.computer>", "Alan Hanson <alan@oxide.computer>"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow = "1"
atty = "0.2.14"
nix = { version = "0.26", features = [ "feature", "uio" ] }
rusqlite = { version = "0.29" }
rustls-pemfile = { version = "1.0.2" }
schemars = { version = "0.8.12", features = [ "uuid1" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slog = "2.7"
slog-async = "2.7"
slog-bunyan = "2.4.0"
slog-dtrace = "0.2.3"
slog-term = "2.9"
tempfile = "3"
thiserror = "1.0"
tokio-rustls = { version = "0.23.4" }
toml = "0.7"
twox-hash = "1.6.3"
uuid = { version = "1.3.3", features = [ "serde", "v4" ] }

[build-dependencies]
vergen = { version = "8.0", features = ["cargo", "git", "git2", "rustc" ] }
