[package]
name = "crucible-common"
version = "0.0.1"
authors = ["Joshua M. Clulow <jmc@oxide.computer>", "Alan Hanson <alan@oxide.computer>"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
atty.workspace = true
nix.workspace = true
rusqlite.workspace = true
rustls-pemfile.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
slog.workspace = true
slog-async.workspace = true
slog-bunyan.workspace = true
slog-dtrace.workspace = true
slog-term.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio-rustls.workspace = true
toml.workspace = true
twox-hash.workspace = true
uuid.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[build-dependencies]
vergen = { version = "8.2", features = ["cargo", "git", "git2", "rustc" ] }
