[package]
name = "crucible-common"
version = "0.0.1"
authors = ["Joshua M. Clulow <jmc@oxide.computer>", "Alan Hanson <alan@oxide.computer>"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
atty.workspace = true
nix.workspace = true
rusqlite.workspace = true
rustls-pemfile.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
slog.workspace = true
slog-async.workspace = true
slog-bunyan.workspace = true
slog-dtrace.workspace = true
slog-term.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
toml.workspace = true
twox-hash.workspace = true
uuid.workspace = true
crucible-workspace-hack.workspace = true
dropshot.workspace = true

[dev-dependencies]
proptest.workspace = true
test-strategy.workspace = true

[build-dependencies]
vergen = { version = "8.2", features = ["cargo", "git", "git2", "rustc" ] }
