[package]
name = "crucible-control-client"
version = "0.0.1"
license = "MPL-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
percent-encoding = "2.2"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
schemars = "0.8.10"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]
