[package]
name = "crucible-control-client"
version = "0.0.1"
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
percent-encoding.workspace = true
progenitor.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
crucible-workspace-hack = { version = "0.1", path = "../workspace-hack" }
