[package]
name = "crucadm"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"

[dependencies]
clap = { version = "3.2", features = ["derive", "env"] }
crucible = { path = "../upstairs" }
crucible-control-client = { path = "../control-client" }
tokio = { version = "1.22.0", features = ["full"] }
