[package]
name = "crudd"
version = "0.1.0"
authors = ["Artemis Everfree <artemis@oxide.computer>"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "3.2", features = ["derive"] }
crucible = { path = "../upstairs" }
crucible-common = { path = "../common" }
crucible-protocol = { path = "../protocol" }
futures = "0.3"
futures-core = "0.3"
ringbuffer = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.22.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"]}
toml = "0.5"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
signal-hook = "0.3.14"
