[package]
name = "crudd"
version = "0.1.0"
authors = ["Artemis Everfree <artemis@oxide.computer>"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
crucible-common.workspace = true
crucible-protocol.workspace = true
crucible.workspace = true
futures-core.workspace = true
futures.workspace = true
ringbuffer.workspace = true
serde.workspace = true
serde_json.workspace = true
signal-hook-tokio.workspace = true
signal-hook.workspace = true
tokio-util.workspace = true
tokio.workspace = true
toml.workspace = true
