[package]
name = "cruplay"
version = "0.1.0"
authors = ["Bryan Cantrill <bryan@oxide.computer>"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "4"
parse_int = "0.4.0"
