[package]
name = "crutest"
version = "0.1.0"
authors = ["Joshua M. Clulow <jmc@oxide.computer>", "Alan Hanson <alan@oxide.computer"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow = "1"
bincode = "1.3.3"
bytes = "1"
clap = { version = "3.2", features = ["derive", "env"] }
crossterm = { version = "0.25.0" }
crucible = { path = "../upstairs" }
crucible-common = { path = "../common" }
crucible-protocol = { path = "../protocol" }
csv = "1.1.6"
dropshot = { git = "https://github.com/oxidecomputer/dropshot", branch = "main" }
dsc-client = { path = "../dsc-client" }
futures = "0.3"
futures-core = "0.3"
indicatif = { version = "0.17.2", features = ["rayon"] }
omicron-common = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
oximeter-producer = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
oximeter = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
ringbuffer = "0.11"
rand = "0.8.5"
rand_chacha = "0.3.1"
reedline = "0.14.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
statistical = "1.0.0"
tokio = { version = "1.22.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"]}
toml = "0.5"
uuid = { version = "1.2.2", features = [ "serde", "v4" ] }
