[package]
name = "crutest"
version = "0.1.0"
authors = ["Joshua M. Clulow <jmc@oxide.computer>", "Alan Hanson <alan@oxide.computer"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
bytes.workspace = true
clap.workspace = true
crossterm.workspace = true
crucible-common.workspace = true
crucible-protocol.workspace = true
crucible.workspace = true
csv.workspace = true
dropshot.workspace = true
dsc-client.workspace = true
human_bytes.workspace = true
futures-core.workspace = true
futures.workspace = true
indicatif.workspace = true
omicron-common.workspace = true
oximeter-producer.workspace = true
oximeter.workspace = true
rand.workspace = true
rand_chacha.workspace = true
reedline.workspace = true
ringbuffer.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
signal-hook-tokio.workspace = true
signal-hook.workspace = true
statistical.workspace = true
tokio-util.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true
crucible-workspace-hack.workspace = true
