[package]
name = "ctop"
version = "0.1.0"
license = "MPL-2.0"
edition = "2024"

[dependencies]
clap.workspace = true
cmon-common = { path = "../cmon-common" }
crossterm.workspace = true
crucible.workspace = true
crucible-protocol.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tokio.workspace = true
crucible-workspace-hack.workspace = true
