[package]
name = "crucible-downstairs-api"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"
rust-version = "1.81"

[dependencies]
crucible-common.workspace = true
crucible-downstairs-types.workspace = true
crucible-workspace-hack.workspace = true
dropshot.workspace = true
dropshot-api-manager-types.workspace = true
hyper.workspace = true
schemars.workspace = true
serde.workspace = true
uuid.workspace = true
