[package]
name = "crucible-downstairs"
version = "0.0.1"
authors = ["Joshua M. Clulow <jmc@oxide.computer>", "Alan Hanson <alan@oxide.computer"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow = "1"
bincode = "1.3"
bytes = "1"
chrono = { version = "0.4.24", features = [ "serde" ] }
clap = { version = "4.3", features = ["derive"] }
crucible = { path = "../upstairs" }
crucible-common = { path = "../common" }
crucible-protocol = { path = "../protocol" }
dropshot = { git = "https://github.com/oxidecomputer/dropshot", branch = "main" }
futures = "0.3"
futures-core = "0.3"
hex = "0.4"
http = "0.2.9"
hyper = { version = "0.14", features = [ "full" ] }
hyper-staticfile = "0.9"
nix = { version = "0.26", features = [ "feature", "uio" ] }
mime_guess = "2.0.4"
omicron-common = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
oximeter-producer = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
oximeter = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
rand = { version = "0.8.5", features = ["min_const_gen"] }
repair-client = { path = "../repair-client" }
reqwest = { version = "0.11", features = ["json"] }
ringbuffer = "0.13"
rusqlite = { version = "0.29" }
schemars = { version = "0.8.12", features = [ "uuid1" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10"
slog = { version = "2.7" }
slog-async = { version = "2.7" }
slog-dtrace = "0.2"
slog-term = { version = "2.9" }
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"]}
tokio-rustls = { version = "0.23.4" }
tracing = "0.1"
toml = "0.7"
opentelemetry = "0.19.0"
opentelemetry-jaeger = { version = "0.17.0" }
tracing-subscriber = "0.3.17"
tracing-opentelemetry = "0.18.0"
usdt = "0.3.5"
uuid = { version = "1.3.2", features = [ "serde", "v4" ] }

[dev-dependencies]
expectorate = "1.0.7"
openapiv3 = "1.0"
openapi-lint = { git = "https://github.com/oxidecomputer/openapi-lint", branch = "main" }
rand_chacha = "0.3.1"
tempfile = "3"

[build-dependencies]
version_check = "0.9.4"

[features]
asm = ["usdt/asm"]
default = []
zfs_snapshot = []
