[package]
name = "crucible-downstairs"
version = "0.0.1"
authors = ["Joshua M. Clulow <jmc@oxide.computer>", "Alan Hanson <alan@oxide.computer"]
license = "MPL-2.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
crucible-common.workspace = true
crucible-protocol.workspace = true
dropshot.workspace = true
futures-core.workspace = true
futures.workspace = true
hex.workspace = true
http.workspace = true
hyper-staticfile.workspace = true
hyper.workspace = true
itertools.workspace = true
libc.workspace = true
mime_guess.workspace = true
nix.workspace = true
omicron-common.workspace = true
opentelemetry-jaeger.workspace = true
opentelemetry.workspace = true
oximeter-producer.workspace = true
oximeter.workspace = true
rand.workspace = true
rayon.workspace = true
repair-client.workspace = true
reqwest.workspace = true
ringbuffer.workspace = true
rusqlite.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
slog-async.workspace = true
slog-dtrace.workspace = true
slog-term.workspace = true
slog.workspace = true
statistical.workspace = true
tokio-rustls.workspace = true
tokio-util.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
usdt.workspace = true
uuid.workspace = true
zerocopy.workspace = true
crucible-workspace-hack.workspace = true

[dev-dependencies]
expectorate.workspace = true
openapi-lint.workspace = true
openapiv3.workspace = true
rand_chacha.workspace = true
tempfile.workspace = true

[build-dependencies]
version_check = "0.9.4"

[features]
asm = ["usdt/asm"]
default = []
zfs_snapshot = []
integration-tests = [] # Enables creating SQLite volumes
