[package]
name = "crucible-downstairs"
version = "0.0.1"
authors = ["Joshua M. Clulow <jmc@oxide.computer>", "Alan Hanson <alan@oxide.computer"]
license = "MPL-2.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
crucible-common.workspace = true
crucible-downstairs-api.workspace = true
crucible-downstairs-types.workspace = true
crucible-protocol.workspace = true
crucible-raw-extent.workspace = true
dropshot.workspace = true
futures-core.workspace = true
futures.workspace = true
hex.workspace = true
http.workspace = true
hyper-staticfile.workspace = true
hyper.workspace = true
itertools.workspace = true
libc.workspace = true
mime_guess.workspace = true
nix.workspace = true
omicron-common.workspace = true
opentelemetry-jaeger.workspace = true
opentelemetry.workspace = true
oximeter-producer.workspace = true
oximeter.workspace = true
iroh.workspace = true
iroh-base.workspace = true
rand.workspace = true
rangemap.workspace = true
rayon.workspace = true
repair-client.workspace = true
reqwest.workspace = true
ringbuffer.workspace = true
rusqlite = { workspace = true, optional = true }
schemars.workspace = true
semver.workspace = true
serde_json.workspace = true
sha2.workspace = true
slog-async.workspace = true
slog-dtrace.workspace = true
slog-term.workspace = true
slog.workspace = true
statistical.workspace = true
thiserror.workspace = true
tokio-rustls.workspace = true
tokio-util.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
usdt.workspace = true
uuid.workspace = true
crucible-workspace-hack.workspace = true

[dev-dependencies]
expectorate.workspace = true
rand_chacha.workspace = true
tempfile.workspace = true

[build-dependencies]
version_check = "0.9.5"

[features]
asm = ["usdt/asm"]
default = ["sqlite"]
zfs_snapshot = []
# SQLite extent backend. Required for opening or migrating regions in the
# pre-raw on-disk format. Seed-only builds disable this via
# `--no-default-features` so the `crucible-downstairs` binary doesn't drag
# `rusqlite` / `libsqlite3-sys` (avoids workspace links-conflicts when seed
# is built alongside other crates that also link `libsqlite3`).
sqlite = ["dep:rusqlite"]
integration-tests = ["sqlite"] # Enables creating SQLite volumes
omicron-build = [] # Uses syncfs(3c) for flushes instead of fsync
