[package]
name = "dsc"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow = "1"
byte-unit = "4.0.19"
clap = { version = "4.1", features = ["derive", "env"] }
csv = "1.2.1"
dsc-client = { path = "../dsc-client" }
dropshot = { git = "https://github.com/oxidecomputer/dropshot", branch = "main", features = [ "usdt-probes" ] }
rand = "0.8.5"
rand_chacha = "0.3.1"
schemars = { version = "0.8.12", features = [ "uuid" ] }
serde = { version = "1", features = ["derive"] }
statistical = "1.0.0"
tokio = { version = "1.27.0", features = ["full"] }

[dev-dependencies]
expectorate = "1.0.6"
openapiv3 = "1.0"
openapi-lint = { git = "https://github.com/oxidecomputer/openapi-lint", branch = "main" }
tempfile = "3"
serde_json = "1"
