[package]
name = "dsc"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
byte-unit.workspace = true
clap.workspace = true
csv.workspace = true
dsc-client.workspace = true
dropshot.workspace = true
rand.workspace = true
rand_chacha.workspace = true
schemars.workspace = true
serde.workspace = true
statistical.workspace = true
tokio.workspace = true
crucible-workspace-hack.workspace = true

[dev-dependencies]
expectorate.workspace = true
openapiv3.workspace = true
openapi-lint.workspace = true
tempfile.workspace = true
serde_json.workspace = true
